--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dragdrop",
-  "version": "1.0.0",
+  "version": "v1.0.0",
   "description": "drag and drop function of js",
   "main": "src/index.js",
   "scripts": {
