--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dragdrop",
-  "version": "v1.2.0",
+  "version": "v1.2.1-3-gbf5f8bd",
   "description": "drag and drop function of js",
   "main": "src/index.js",
   "scripts": {
